--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,9 @@
 title: Noverish's Blog
 email: embrapers263@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+  Noverish's iOS & Server development story blog
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "http://noverish.me" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: noverish
 github_username:  noverish
 
@@ -33,9 +31,10 @@ plugins:
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - build_and_push.sh
 #   - node_modules
 #   - vendor/bundle/
 #   - vendor/cache/
