--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
-
-# Created by https://www.gitignore.io/api/jekyll
-
-### Jekyll ###
-_site/
-.sass-cache/
-.jekyll-metadata
-
-# End of https://www.gitignore.io/api/jekyll
+.idea
+.DS_Store
+.sass-cache
+_site
+node_modules
+_drafts
