--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
 # Site Settings
-title: Jekflix | A theme for Jekyll
-email: youremail@xyz.com
-description: Some text about your blog.
-baseurl: "/jekflix-template" # the subpath of your site, e.g. /blog
-url: "https://www.rossener.com" # the base hostname & protocol for your site
+title: Noverish Blog
+email: embrapers273@gmail.com
+description:  Noverish's iOS & Server development story blog
+baseurl: "/Users/noverish/Documents/jekflix-template/_site" # the subpath of your site, e.g. /blog
+url: "file://" # the base hostname & protocol for your site
 google_analytics: "UA-XXXXXXXX-X"
 
 # User Settings
-username: Jekflix
+username: Noverish's Blog
 user_description: Some text about you.
 disqus_username: disqus_username
 
 # Social Media
 # Remove the item if you don't need it
-github_username: github_username
+github_username: Noverish
 facebook_username: facebook_username
 twitter_username: twitter_username
 instagram_username: instagram_username
