Added logo materials and change path of logo images

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ highlighter: rouge
 permalink: /:title/
 
 # Plugins
-gems:
+plugins:
   - jemoji
 
 # Links to include in menu navigation
@@ -37,4 +37,4 @@ links:
     url: /contact/
 
 # Exclude my node related stuff
-exclude: ['package.json', 'src', 'node_modules']
+exclude: ['package.json', 'src', 'node_modules', 'logo-materials']
