--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-.idea
 .DS_Store
-.sass-cache
-_site
-node_modules
-_drafts
+
+# Created by https://www.gitignore.io/api/jekyll
+
+### Jekyll ###
+_site/
+.sass-cache/
+.jekyll-metadata
+
+# End of https://www.gitignore.io/api/jekyll
